--- a/styles/sass/utils/_placeholders.scss
+++ b/styles/sass/utils/_placeholders.scss
@@ -15,6 +15,10 @@
     justify-content: space-between;
 }
 
+%justify-end{
+    justify-content: end;
+}
+
 
 %numbering-of-functions{
     background: $color-primary;
