--- a/styles/style.css
+++ b/styles/style.css
@@ -196,44 +196,21 @@ figure {
     transform: translateY(100%) scale(1);
   }
 }
-@keyframes test_slide {
-  0% {
-    right: -3rem;
-  }
-  100% {
-    right: 0;
-  }
-}
 @keyframes icone {
   0% {
-    opacity: 0;
-  }
-  80% {
-    opacity: 0.5;
+    width: 0;
   }
   100% {
-    opacity: 1;
+    width: 3.5rem;
   }
 }
-@keyframes coeur {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+@keyframes coeur {}
 @keyframes icone2 {
   0% {
     opacity: 0;
-    transform: translateX(10%);
-  }
-  90% {
-    opacity: 0;
   }
   100% {
     opacity: 1;
-    transform: translateX(-100%);
   }
 }
 .first-section {
@@ -327,16 +304,25 @@ figcaption p {
   padding: 0.5rem 0.7rem;
 }
 
+.i-3 {
+  line-height: 4.5rem;
+  padding-top: 1.5rem;
+  font-size: 1.5rem;
+}
+
+.test-coeur {
+  padding-top: 1.5rem;
+}
+
 .coeur-plein {
   background: -webkit-linear-gradient(0.6turn, #9356DC, #FF79DA);
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  opacity: 0;
   padding: 0;
   z-index: 1;
   position: relative;
-  translate: 2px;
-  bottom: 3px;
+  right: 28px;
+  opacity: 0;
 }
 
 .coeur-plein i {
@@ -345,12 +331,12 @@ figcaption p {
 
 .menus-2:hover .coeur-plein {
   animation: icone2 0.5s ease-in-out 1 both;
+  z-index: 2;
 }
 
 .menus-2 {
-  padding-top: 1rem;
   position: relative;
-  right: -1.5rem;
+  right: 0.2rem;
 }
 
 .coeur-vide {
@@ -358,7 +344,7 @@ figcaption p {
   padding: 0;
 }
 
-.coeur-vide:hover {
+.menus-2:hover .coeur-vide {
   transition: color 0.5s linear;
   color: #fafafa;
 }
@@ -423,9 +409,6 @@ footer a {
 
 .titles-menu {
   padding: 1rem 0 1rem 1rem;
-  overflow: hidden !important;
-  white-space: nowrap !important;
-  text-overflow: ellipsis !important;
 }
 
 .item-menu {
@@ -436,6 +419,14 @@ footer a {
   display: block;
   font-weight: initial;
   padding-bottom: 0.2rem;
+}
+
+.titles-menu > span {
+  overflow: hidden !important;
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
+  width: 17rem;
+  display: block;
 }
 
 .menus {
@@ -451,14 +442,16 @@ footer a {
   background: #99E2D0;
   color: white;
   border-radius: 0 1rem 1rem 0;
-  opacity: 0;
+  width: 0rem;
+  overflow: hidden;
+}
+
+.i-2 {
+  transform: translateX(-3.5rem);
 }
 
 .price-2 {
   padding: 2.8rem 0.6rem 0 0.6rem;
-  overflow: hidden !important;
-  white-space: nowrap !important;
-  text-overflow: ellipsis !important;
 }
 
 .vald .i-2 {
@@ -466,28 +459,18 @@ footer a {
   font-size: 1.5rem;
 }
 
-.menus:hover .checking {
-  animation: test_slide 1s forwards;
-  overflow: hidden !important;
-  white-space: nowrap !important;
-  text-overflow: ellipsis !important;
-}
-
 .menus:hover .vald {
   animation: icone 0.5s linear 1 forwards;
 }
 
 .menus:hover .i-2 {
-  animation: spin_2 0.75s linear 1;
+  animation: spin_2 0.5s linear 1 forwards;
 }
 
 .checking {
   position: absolute;
   bottom: 0;
-  right: -3rem;
-  overflow: hidden !important;
-  white-space: nowrap !important;
-  text-overflow: ellipsis !important;
+  right: 0;
 }
 
 .logo-restaurants {
@@ -555,6 +538,7 @@ footer a {
 
   div .fa-heart {
     margin-top: 1rem;
+    padding: 1rem;
   }
 
   .h2 {
@@ -564,11 +548,6 @@ footer a {
 
   .img-desktop {
     max-height: 15rem;
-  }
-
-  .vald .i-2 {
-    padding: 2rem 1rem;
-    font-size: 1.5rem;
   }
 
   .btn-page-menu {
@@ -624,8 +603,6 @@ footer a {
     padding-right: 15rem;
     justify-content: space-around;
     display: flex;
-    position: relative;
-    bottom: 0;
   }
 
   footer h4 {
